--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <div class="modal-box">
       <button id="closeModal" class="close-btn" aria-label="Close">×</button>
       <h3 id="modalJobTitle"></h3>
-      <p class="muted"><span id="modalJobSchool"></span> · <span id="modalJobLocation"></span></p>
+      <p class="muted" id="modalMeta"></p>
       <p id="modalJobDescription" class="desc"></p>
       <div class="modal-actions">
-        <a id="viewPostingBtn" class="btn btn-secondary" href="#" target="_blank" rel="noopener noreferrer">View posting</a>
-        <a id="applyJobBtn" class="btn btn-primary" href="#" target="_blank" rel="noopener noreferrer">Apply</a>
+        <a id="viewPostingBtn" class="btn btn-outline" href="#" target="_blank" rel="noopener noreferrer">View posting</a>
+        <a id="applyJobBtn" class="btn btn-solid" href="#" target="_blank" rel="noopener noreferrer">Apply</a>
       </div>
     </div>
   </div>
@@ -57,3 +57,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
