--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="jobsContainer" class="grid"></section>
   </main>
 
-  <!-- Modal (starts hidden; JS also forces hidden) -->
+  <!-- Modal -->
   <div id="jobModal" class="modal hidden" aria-hidden="true">
     <div class="modal-box">
       <button id="closeModal" class="close-btn" aria-label="Close">×</button>
@@ -53,5 +53,6 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
