--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Asia Education Jobs</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -53,6 +53,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
