--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Asia Education Jobs</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -33,7 +33,9 @@
       <p>Try clearing filters or changing your search.</p>
     </section>
 
-    <section id="jobsContainer" class="grid"></section>
+    <section id="jobsContainer" class="grid">
+      <!-- Job cards go here -->
+    </section>
   </main>
 
   <!-- Modal -->
