--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Asia Education Jobs</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -33,9 +34,7 @@
       <p>Try clearing filters or changing your search.</p>
     </section>
 
-    <section id="jobsContainer" class="grid">
-      <!-- Job cards go here -->
-    </section>
+    <section id="jobsContainer" class="grid"></section>
   </main>
 
   <!-- Modal -->
@@ -55,7 +54,6 @@
   <script src="app.js"></script>
 </body>
 </html>
-
 
 
 
